<resources>
    <string name="app_name">Personas</string>
    <string name="Titulo">Titulo</string>
    <string name="Agregar">Agregar</string>
    <string name="Cedula">Cedula</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Guardar">Guardar</string>
    <string name="Borrar">Borrar</string>
    <string name="Numero">Numero</string>
    <string name="Crear">Crear Persona</string>
    <string name="Listar">Listar Persona</string>
    <array name="Opciones">
        <item>@string/Crear</item>
        <item>@string/Listar</item>
    </array>
    <string name="MensajeExito">Persona guardada exitosamente!</string>
</resources>
