<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="495dp"
    android:orientation="vertical"
    tools:context="com.example.android.personas.CrearPersonas"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/Agregar"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/TxtCedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:ems="10"
        android:hint="@string/Cedula"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/TxtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/TxtApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Apellido"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/BtnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Guardar"
        android:text="@string/Guardar" />

    <Button
        android:id="@+id/BtnBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:text="@string/Borrar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"></LinearLayout>

</LinearLayout>

